<resources>

    <!--MAIN APP-->
    <string name="app_name">Hillforty</string>
    <string name="mainAppWelcomeLabel">Welcome to Hillforty,</string>

    <!--ACCOUNT ACTIVITY-->
    <string name="accountHeader">My Account</string>
    <string name="accountUsernameLabel">Username: </string>
    <string name="accountEmailLabel">Email: </string>
    <string name="accountPasswordLabel">Password: </string>
    <string name="accountDeleteButton">Delete Account</string>
    <string name="accountDeleteHillfortsButton">Delete Hillforts</string>
    <string name="accountEditButton">Edit Account</string>
    <string name="accountPasswordButton">Change Password</string>
    <string name="accountEmailButton">Change Email</string>


    <!--HILLFORT ACTIVITY-->
    <string name="hillfortNameField">Name</string>
    <string name="hillfortNotesHeader">Notes</string>
    <string name="hillfortKeyInfoHeader">Key Info</string>
    <string name="hillfortLocationHeader">Location</string>
    <string name="hillfortDescriptionLabel">Description: </string>
    <string name="hillfortDateVisitedLabel">Date Visited: </string>
    <string name="hillfortDescriptionField">Enter Description…</string>
    <string name="hillfortVisitedCheckbox">Is Visited</string>
    <string name="hillfortDateVisitedField">Enter Date Visited…</string>
    <string name="hillfortRatingLabel">Rating: </string>
    <string name="hillfortEditLocationButton">Edit Location</string>
    <string name="hillfortAddNoteButton">Add Note</string>
    <string name="hillfortEditImageButton">Select Images</string>
    <string name="hillfortChooseCoverButton">Choose As Cover</string>
    <string name="hillfortShowRouteButton">Show Route</string>
    <string name="hillfortFabShare">Share</string>
    <string name="hillfortFabDelete">Delete</string>
    <string name="hillfortFabFavourite">Favourite</string>
    <string name="hillfortLocationSaveButton">Save</string>

    <!--LOGIN ACTIVITY-->
    <string name="loginEmailField">Email…</string>
    <string name="loginPasswordField">Password…</string>
    <string name="loginDividerLabel">or…</string>
    <string name="loginButton">LOG IN</string>
    <string name="loginSignUpButton">SIGN UP</string>

    <!--NOTE ACTIVITY-->
    <string name="noteHeader">Note</string>

    <!--SIGN UP ACTIVITY-->
    <string name="signUpUsernameField">Enter a Username…</string>
    <string name="signUpEmailField">Enter an Email…</string>
    <string name="signUpPasswordField">Enter a Password…</string>
    <string name="signUpPassword2Field">Confirm Password…</string>
    <string name="signUpButton">Sign Up</string>

    <!--STATS ACTIVITY-->
    <string name="statsHeader">User Statistics</string>
    <string name="statsAverageRatingField">Average Hillfort Rating: </string>
    <string name="statsTotalHillfortsField">Number Of Hillforts: </string>
    <string name="statsTotalImagesField">Number Of Images: </string>
    <string name="statsTotalVisitsField">Number Of Visits: </string>
    <string name="statsTotalNotesField">Number Of Notes: </string>
    <string name="statsTopUserField">Number Of Favourites: </string>

    <!--ACCOUNT DIALOG-->
    <string name="accountDialogUsernameField">New Username…</string>
    <string name="accountDialogEmailField">New Email…</string>
    <string name="accountDialogPasswordField">New Password…</string>
    <string name="accountDialogUpdateButton">Update</string>
    <string name="accountDialogCancelButton">Cancel</string>

    <!--NOTE DIALOG-->
    <string name="noteDialogTitleField">Note Title</string>
    <string name="noteDialogContentField">Note Content</string>
    <string name="noteDialogAddButton">Save Note</string>
    <string name="noteDialogCancelButton">Cancel</string>

    <!--ABOUT DIALOG-->
    <string name="aboutHeader">About</string>
    <string name="aboutInformation">"
        Hillforty, created by Luke Fox.
        \n\nThis app was made as part assignments 1 &amp; 2 for Mobile App Development.
        \n\nThe repo for this project can be found here:"
    </string>
    <string name="aboutGitHubURL">https://github.com/Foxyf76/Hillfort-App/</string>

    <!--HILLFORT LIST DIALOG-->
    <string name="filterMenuSortFavourite">Sort by Favourites</string>
    <string name="filterMenuSortRating">Sort by Rating</string>
    <string name="filterMenuSortVisit">Sort by Visits</string>
    <string name="filterMenuResetFilter">Reset Filters</string>

    <!--NAVIGATOR-->
    <string name="hillfortNavigatorWalkingButton">Walking</string>
    <string name="hillfortNavigatorDrivingButton">Driving</string>
    <string name="hillfortNavigatorMapButton">Open In Maps</string>
    <string name="hillfortNavigatorBackButton">Back</string>

    <string name="hillfortNavigationBarHillforts">Hillforts</string>
    <string name="hillfortNavigationBarHome">Home</string>
    <string name="hillfortNavigationBarMap">Map</string>
    <string name="hillfortNavigationBarMore">More</string>
    <string name="hillfortNavigationBarLogout">Logout</string>

</resources>

