<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/hillfortNavigationBarHome" />
    <item
        android:id="@+id/navigation_hillforts"
        android:icon="@drawable/ic_menu_castle"
        android:title="@string/hillfortNavigationBarHillforts" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_menu_map"
        android:title="@string/hillfortNavigationBarMap" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_menu_more"
        android:title="@string/hillfortNavigationBarMore" />

    <item
        android:id="@+id/navigation_logout"
        android:icon="@drawable/ic_menu_logout"
        android:title="@string/hillfortNavigationBarLogout" />
</menu>
