<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_search"
        android:title="@string/app_name"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom|collapseActionView"
        />

    <group
        android:id="@+id/filterMenu"
        android:checkableBehavior="single"
        app:showAsAction="always">

        <item
            android:id="@+id/sortByFavourite"
            android:title="@string/filterMenuSortFavourite" />

        <item
            android:id="@+id/sortByRating"
            android:title="@string/filterMenuSortRating" />

        <item
            android:id="@+id/resetView"
            android:title="@string/filterMenuResetFilter" />
    </group>

    <group
        android:id="@+id/filterOrder"
        android:checkableBehavior="single"
        app:showAsAction="always">

        <item
            android:id="@+id/sortAscending"
            android:title="Ascending" />

        <item
            android:id="@+id/sortDescending"
            android:title="Descending" />
    </group>

</menu>