<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.SplashActivity">

    <ImageView 
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginBottom="50dp"
        android:tint="@android:color/white"
        android:src="@drawable/splash" />

    <LinearLayout
        android:layout_width="348dp"
        android:layout_height="355dp"
        android:background="@drawable/rounded_layout"
        android:gravity="center"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/signUpUsernameInput"
            android:layout_width="238dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:hint="@string/signUpUsernameField"
            android:inputType="text"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/fontHint" />

        <EditText
            android:id="@+id/signUpEmailInput"
            android:layout_width="238dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:hint="@string/signUpEmailField"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/fontHint" />

        <EditText
            android:id="@+id/signUpPasswordInput"
            android:layout_width="238dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:hint="@string/signUpPasswordField"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/fontHint" />

        <EditText
            android:id="@+id/signUpPasswordInput2"
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:hint="@string/signUpPassword2Field"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/fontHint" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="39dp"
            android:background="@drawable/rounded_button"
            android:text="@string/signUpButton"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>