<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_menu_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.102" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-thin"
        android:gravity="center"
        android:text="@string/accountHeader"
        android:textColor="@android:color/darker_gray"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.259" />


    <TextView
        android:id="@+id/accountEmail"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="77dp"
        android:layout_marginBottom="99dp"
        android:fontFamily="sans-serif-thin"
        android:gravity="center"
        android:textAlignment="center"
        android:text="lukefox"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="53dp"
        android:layout_margin="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.666">

        <Button
            android:id="@+id/accountChangeEmail"
            style="?android:attr/buttonBarStyle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/colorPrimary"
            android:text="Change Email"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/accountChangePassword"
            style="?android:attr/buttonBarStyle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/colorPrimary"
            android:text="Change Password"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="53dp"
        android:layout_margin="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.762">

        <Button
            android:id="@+id/accountDeleteBtn"
            style="?android:attr/buttonBarStyle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/accountDeleteButton"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/accountDeleteHillfortsBtn"
            style="?android:attr/buttonBarStyle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/accountDeleteHillfortsButton"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>